Add user email verifications and add the login in the swagger documentation (#6)
